grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana-ingress
  namespace: monitoring

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - grafana.golearning.site

    secretName: grafana-tls

  rules:
  - host: grafana.golearning.site

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: monitoring-grafana

            port:
              number: 80
